--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.0.3",
     "@vercel/postgres": "^0.5.1",
+    "bcrypt": "^5.1.1",
+    "cookie": "^0.6.0",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.0.4",
     "react": "^18",
     "react-device-detect": "^2.2.3",
