--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.6.5",
     "bcrypt": "^5.1.1",
     "cookie": "^0.6.0",
+    "cookies-next": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "next": "14.0.4",
     "react": "^18",
