--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
+    "react-ga": "^3.3.1",
     "tailwindcss-animated": "^1.0.1",
     "tsparticles-slim": "^2.12.0"
   },
