--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-spring/parallax": "^9.7.3",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.0.3",
+    "@vercel/analytics": "^1.1.1",
     "@vercel/postgres": "^0.5.1",
     "axios": "^1.6.5",
     "bcrypt": "^5.1.1",
@@ -22,7 +23,6 @@
     "react": "^18",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
-    "react-ga": "^3.3.1",
     "tailwindcss-animated": "^1.0.1",
     "tsparticles-slim": "^2.12.0"
   },
