--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react": "^18",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
+    "react-gridlines": "^1.1.7",
+    "react-parallax-tilt": "^1.7.181",
     "tailwindcss-animated": "^1.0.1",
     "tsparticles-slim": "^2.12.0"
   },
