--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "cookies-next": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "next": "14.0.4",
+    "primereact": "^10.3.2",
     "react": "^18",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "react-gridlines": "^1.1.7",
     "react-parallax-tilt": "^1.7.181",
+    "react-toastify": "^10.0.3",
     "tailwindcss-animated": "^1.0.1",
     "tsparticles-slim": "^2.12.0"
   },
