--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "cookies-next": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "next": "14.0.4",
-    "primereact": "^10.3.2",
+    "react-transition-group": "^4.4.5",
+    "primereact": "^10.0.9",
+    "primeicons": "^6.0.1",
+    "primeflex": "^3.3.1",
     "react": "^18",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
