--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/model-viewer": "^3.4.0",
     "@react-spring/parallax": "^9.7.3",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.0.3",
@@ -32,6 +33,7 @@
     "react-toastify": "^10.0.3",
     "react-transition-group": "^4.4.5",
     "tailwindcss-animated": "^1.0.1",
+    "three": "^0.160.0",
     "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
