--- a/package.json
+++ b/package.json
@@ -11,6 +11,13 @@
   "dependencies": {
     "@google-analytics/data": "^4.3.0",
     "@google/model-viewer": "^3.4.0",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@react-spring/parallax": "^9.7.3",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.0.3",
@@ -18,10 +25,14 @@
     "@vercel/postgres": "^0.5.1",
     "axios": "^1.6.5",
     "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "cookie": "^0.6.0",
     "cookies-next": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.372.0",
     "next": "14.0.4",
+    "next-themes": "^0.3.0",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primereact": "^10.0.9",
@@ -33,6 +44,8 @@
     "react-social-icons": "^6.9.0",
     "react-toastify": "^10.0.3",
     "react-transition-group": "^4.4.5",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "tailwindcss-animated": "^1.0.1",
     "three": "^0.160.0",
     "tsparticles-slim": "^2.12.0"
