--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "react-gridlines": "^1.1.7",
+    "react-icons": "^5.1.0",
     "react-parallax-tilt": "^1.7.181",
     "react-social-icons": "^6.9.0",
     "react-toastify": "^10.0.3",
