--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
     "axios": "^1.6.5",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
+    "clsx": "^2.1.1",
     "cookie": "^0.6.0",
     "cookies-next": "^4.1.0",
+    "framer-motion": "^11.1.7",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.372.0",
     "next": "14.0.4",
