--- a/package.json
+++ b/package.json
@@ -43,11 +43,13 @@
     "primeicons": "^6.0.1",
     "primereact": "^10.0.9",
     "react": "^18",
+    "react-custom-scrollbars-2": "^4.5.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "react-gridlines": "^1.1.7",
     "react-icons": "^5.1.0",
     "react-parallax-tilt": "^1.7.181",
+    "react-scrollbars-custom": "^4.1.1",
     "react-social-icons": "^6.9.0",
     "react-toastify": "^10.0.3",
     "react-transition-group": "^4.4.5",
